# TZProject

./: CMakeLists.txt  README.md
lib/include/: lib.h
lib/src/: lib.cpp
program1/include/: program_1.h
program1/src/: program_1.cpp
program2/include/: program_2.h
program2/src/: program_2.cpp
